--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ employees. Experience on real world business and economy. </p>
 in 2013, which received some good reviews, some explicitly praising the keyboards:</p>
 <blockquote>
     <p>I enjoy the riffs quite a bit, but ultimately, it’s the strong performances on the keys, along with the atmosphere
-and unique character to the songs that sets it apart in the crowd.”</p>
+and unique character to the songs that sets it apart in the crowd.</p>
 <footer>Mark Nagy, Black Wind Metal</footer>
 </blockquote>
 </div>
