--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@ kinds of graphics related disciplines.</p>
 
 <h2>Publications</h2>
 <h4><a href="http://www.cs.ubc.ca/labs/imager/tr/2017/FlowRep/">FlowRep: Descriptive Curve Networks for Free-Form Design Shapes</a> <small>2017</small></h4>
-<p>Giorgio Gori, Alla Sheffer, Nicholas Vining, Enrique Rosales, Nathan Carr, Tao Ju. Accepted to SIGGRAPH 2017.</p>
+<p>Giorgio Gori, 
+    <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>, 
+    <a href="https://www.gaslampgames.com/about/nicholas-vining/">Nicholas Vining</a>, 
+    Enrique Rosales, 
+    <a href="https://research.adobe.com/person/nathan-carr/">Nathan Carr</a>, 
+    <a href="http://www.cse.wustl.edu/~taoju/index.htm">Tao Ju</a>. Accepted to SIGGRAPH 2017.</p>
 
 <h2>Education</h2>
 <h4>M.Sc. candidate in Computer Science <small>2014 - Present</small></h4>
@@ -102,7 +107,7 @@ kinds of graphics related disciplines.</p>
     </div>
 
     <div class="col-md-4">
-        <h4>KineScan - Turning the Kinect into a 3D scanner <small>Autumn 2014</small></h4>
+        <h4><a href="https://bitbucket.org/ggori/kinescan">KineScan - Turning the Kinect into a 3D scanner</a> <small>Autumn 2014</small></h4>
         <p>B.Sc. Thesis at Università della Svizzera Italiana supervised by Kai Hormann.
     Built a 3d scanner using the Kinect sensor and a Lego platform. Experience in Kinect API, point
     clouds and surface reconstruction. [C#, OpenGL, Kinect SDK, Lego Mindstorms]</p>
@@ -112,19 +117,19 @@ kinds of graphics related disciplines.</p>
 <div class="row">    
     <div class="col-md-3">
         <a href="./img/pipeworld.png"><img src="./img/pipeworld.png" class="my-img"></a>
-        <h4>PipeWorld <small>2013</small></h4>
+        <h4><a href="https://bitbucket.org/ggori/3dsnake">PipeWorld</a> <small>2013</small></h4>
         <p>Game inspired by Snake, Knot in 3D, and Counterclockwise. The goal is to capture cubes by moving in a 3D
             space in a 1st person view and avoiding your trail. The space is open but recursive, meaning that there are no walls, 
             but after moving in a direction for a short time you will find your own trail. [C++, OpenGL]</p>
     </div>
     <div class="col-md-3">
         <a href="https://www.youtube.com/watch?v=ba6iUVk3Wnk"><img src="./img/railway.jpg" class="my-img"></a>
-        <h4>Railway Empire <small>2013</small></h4>
+        <h4><a href="https://bitbucket.org/aurecchia/railwayexpress/src">Railway Empire</a> <small>2013</small></h4>
         <p>[Group project] A simple but fully functional copy of Sid Meyer's Railroad Tycoon. [Java] - [<a href="https://www.youtube.com/watch?v=ba6iUVk3Wnk">video</a>]</p>
     </div>
     <div class="col-md-3">
         <a href="./img/streamninja3.jpg"><img src="./img/streamninja3.jpg" class="my-img"></a>
-        <h4>StreamNinja <small>2012</small></h4>
+        <h4><a href="https://bitbucket.org/ggori/railwayexpress/src">StreamNinja</a> <small>2012</small></h4>
         <p>[Group project] Awesome web application for social listening of music. Features simultaneous playback, playlists sharing and a full tune mixer. [JavaScript]</p>
         <p></p>
     </div>
