--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ kinds of graphics related disciplines.</p>
     <a href="https://www.gaslampgames.com/about/nicholas-vining/">Nicholas Vining</a>, 
     Enrique Rosales, 
     <a href="https://research.adobe.com/person/nathan-carr/">Nathan Carr</a>, 
-    <a href="http://www.cse.wustl.edu/~taoju/index.htm">Tao Ju</a>. Accepted to SIGGRAPH 2017.</p>
+    <a href="http://www.cse.wustl.edu/~taoju/index.htm">Tao Ju</a>. <br/>
+    Accepted to SIGGRAPH 2017.</p>
 
 <h2>Education</h2>
 <h4>M.Sc. candidate in Computer Science <small>2014 - Present</small></h4>
