--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
 
 <div class="container">
 <div class="title">
-<h1>Giorgio Gori</h1>
-<p class="lead">M.Sc. candidate at department of Computer Science, University of British Columbia<br/></p>
-<a href="https://github.com/HasKha">Github</a> 
-<span class="glyphicon glyphicon-one-fine-dot"></span> 
-<a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
-<span class="glyphicon glyphicon-one-fine-dot"></span> 
-gorig@cs.ubc.ca
+    <div float="right">
+        <img src="img/me.png" class="img-rounded" style="max-width: 140px; float:right;" alt="My photo" />
+    </div>
+    <h1>Giorgio Gori</h1>
+    <p class="lead">M.Sc. candidate at department of Computer Science, University of British Columbia<br/></p>
+    <a href="https://github.com/HasKha">Github</a> 
+    <span class="glyphicon glyphicon-one-fine-dot"></span> 
+    <a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
+    <span class="glyphicon glyphicon-one-fine-dot"></span> 
+    gorig@cs.ubc.ca
 </div>
 
 <h2>About</h2>
