--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+    //note: github is -3, ubc is -5
     ga('create', 'UA-75239620-5', 'auto');
     ga('send', 'pageview');
 
@@ -54,8 +55,8 @@
 
 <div class="container">
 <div class="title">
-    <div float="right">
-        <img src="img/me.png" class="img-rounded" style="max-width: 140px; float:right;" alt="My photo" />
+    <div float="left">
+        <a href="img/siggraph.jpg"><img src="img/me.jpg" class="img-rounded" style="max-width: 140px; float:left;" alt="My photo" /></a>
     </div>
     <h1>Giorgio Gori</h1>
     <p class="lead">M.Sc. candidate at department of Computer Science, University of British Columbia<br/></p>
