--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <span class="glyphicon glyphicon-one-fine-dot"></span> 
     <a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
     <span class="glyphicon glyphicon-one-fine-dot"></span> 
-    gorig@cs.ubc.ca
+    ggori@live.com
 </div>
 
 <h2>About</h2>
