added Eye links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ kinds of graphics related disciplines.</p>
 
 <h2>Publications</h2>
 <h4><a href="http://www.cs.ubc.ca/labs/imager/tr/2017/FlowRep/">FlowRep: Descriptive Curve Networks for Free-Form Design Shapes</a> <small>2017</small></h4>
-<p>Giorgio Gori, 
+<p><strong> Giorgio Gori</strong>, 
     <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>, 
     <a href="https://www.gaslampgames.com/about/nicholas-vining/">Nicholas Vining</a>, 
     Enrique Rosales, 
@@ -206,8 +206,11 @@ employees. Experience on real world business and economy. </p>
 </div>
 
 <h2>Other Interests</h2>
-<h4>Keyboardist in progressive metal band <a href="http://www.ashesofchaos.com/en/home.html"><i>Ashes of Chaos</i></a> <small>2008 - 2013</small></h4>
-<p>Co-founder and fundamental contributor to the composing process. Released an album, Eye,
+<h4>Keyboardist in progressive metal band <a href="https://www.facebook.com/ashesofchaos/"><i>Ashes of Chaos</i></a> <small>2008 - 2013</small></h4>
+<p>Co-founder and fundamental contributor to the composing process. Released an album, Eye 
+    <small>(<a href="https://www.youtube.com/watch?v=j1eFFR5NxvY">YouTube</a>, 
+        <a href="https://open.spotify.com/artist/4W5F1S61GAKa31hmEuFkJZ">Spotify</a>, 
+        <a href="https://itunes.apple.com/us/artist/ashes-of-chaos/id671532122">iTunes</a>)</small>,
 in 2013, which received some good reviews, some explicitly praising the keyboards:</p>
 <blockquote>
     <p>I enjoy the riffs quite a bit, but ultimately, it’s the strong performances on the keys, along with the atmosphere
