added smartbot technologies

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ kinds of graphics related disciplines.</p>
     <div class="col-md-4">
         <h4><a href="https://github.com/HasKha/GW-Smart-Bot">Smart Bot</a> <small>Spring 2016</small></h4>
         <p>A game bot focused on advanced path planning using TSP and clustering. The project 
-            outperforms the state of the art and novice players, approaching the level of an expert player. </p>
+            outperforms the state of the art and novice players, approaching the level of an expert player. [C++, OpenGL] </p>
     </div>
 
     <div class="col-md-4">
