--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="img/siggraph.jpg"><img src="img/me.jpg" class="img-rounded" style="max-width: 140px; float:left;" alt="My photo" /></a>
     </div>
     <h1>Giorgio Gori</h1>
-    <p class="lead">M.Sc. candidate at department of Computer Science, University of British Columbia<br/></p>
+    <p class="lead">M.Sc. graduate at department of Computer Science, University of British Columbia<br/></p>
     <a href="https://github.com/HasKha">Github</a> 
     <span class="glyphicon glyphicon-one-fine-dot"></span> 
     <a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
@@ -68,8 +68,8 @@
 </div>
 
 <h2>About</h2>
-<p>I am a MSc candidate at UBC working with Prof. <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>, 
-soon to be graduating and looking for an exciting job at a cool graphics company. My interests are in all 
+<p>I am a recent MSc graduate from UBC, having worked with Prof. <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>.
+I am looking for an exciting job at a cool graphics company. My interests are in all 
 kinds of graphics related disciplines.</p>
 
 <h2>Publications</h2>
@@ -83,7 +83,7 @@ kinds of graphics related disciplines.</p>
     Accepted to SIGGRAPH 2017.</p>
 
 <h2>Education</h2>
-<h4>M.Sc. candidate in Computer Science <small>2014 - Present</small></h4>
+<h4>M.Sc. in Computer Science <small>2014 - 2017</small></h4>
 <p>University of British Columbia (UBC), Vancouver, Canada <br/> Supervised by Alla Sheffer</p>
 
 <h4>B.Sc. in Informatics, Magna Cum Laude <small>2011 - 2014</small></h4>
