--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 <h2>About</h2>
 <p>I am a recent MSc graduate from UBC, having worked with Prof. <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>.
-I am looking for an exciting job at a cool graphics company. My interests are in all 
-kinds of graphics related disciplines.</p>
+My interests are in all kinds of graphics related disciplines.</p>
 
 <h2>Publications</h2>
 <h4><a href="http://www.cs.ubc.ca/labs/imager/tr/2017/FlowRep/">FlowRep: Descriptive Curve Networks for Free-Form Design Shapes</a> <small>2017</small></h4>
