--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="img/siggraph.jpg"><img src="img/me.jpg" class="img-rounded" style="max-width: 140px; float:left;" alt="My photo" /></a>
     </div>
     <h1>Giorgio Gori</h1>
-    <p class="lead">M.Sc. graduate at department of Computer Science, University of British Columbia<br/></p>
+    <p class="lead">Software Engineer at Adobe Research<br/></p>
     <a href="https://github.com/HasKha">Github</a> 
     <span class="glyphicon glyphicon-one-fine-dot"></span> 
     <a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
@@ -67,9 +67,9 @@
     ggori@live.com
 </div>
 
-<h2>About</h2>
+<!--<h2>About</h2>
 <p>I am a recent MSc graduate from UBC, having worked with Prof. <a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>.
-My interests are in all kinds of graphics related disciplines.</p>
+My interests are in all kinds of graphics related disciplines.</p>-->
 
 <h2>Publications</h2>
 <h4><a href="http://www.cs.ubc.ca/labs/imager/tr/2017/FlowRep/">FlowRep: Descriptive Curve Networks for Free-Form Design Shapes</a> <small>2017</small></h4>
