--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="img/siggraph.jpg"><img src="img/me.jpg" class="img-rounded" style="max-width: 140px; float:left;" alt="My photo" /></a>
     </div>
     <h1>Giorgio Gori</h1>
-    <p class="lead">Software Engineer at Adobe Research<br/></p>
+    <p class="lead">Research Engineer at Adobe<br/></p>
     <a href="https://github.com/HasKha">Github</a> 
     <span class="glyphicon glyphicon-one-fine-dot"></span> 
     <a href="https://www.linkedin.com/in/gorig/">Linkedin</a>
@@ -80,6 +80,30 @@ My interests are in all kinds of graphics related disciplines.</p>-->
     <a href="https://research.adobe.com/person/nathan-carr/">Nathan Carr</a>, 
     <a href="http://www.cse.wustl.edu/~taoju/index.htm">Tao Ju</a>. <br/>
     Accepted to SIGGRAPH 2017.</p>
+    
+<h2>Work Experience</h2>
+<div class="row">
+    <h4>Research Engineer<small>2017 - Current</small></h4>
+    <p><i>Adobe Research</i> </br></p>
+    
+    <h4>Teaching Assistant <small>2014 - 2016</small></h4>
+    <p><i>University of British Columbia</i> <br>
+        Courses: Computer Graphics: Modeling - Data Structures and Algorithms - Internet Computing. <br>
+        Received a Department of Science TA evaluation score of 4.76 / 5 and positive feedback.</p>
+
+    <h4>Undergraduate Research Opportunity Program <small>Summer 2013</small></h4>
+    <p><i>Università della Svizzera Italiana</i><br>
+        Project with Mauro Pezzè about cloud technologies.
+The task was to adapt a framework for testing elastic applications in the cloud to the Amazon
+EC2 Cloud. [Python, Java, shell scripting]</p>
+    <!--
+    <div class="col-md-4">
+        <h4>Part-time Accountant <small>2009 - 2014</small></h4>
+        <p><i>Gori Calzature SRL</i><br>
+            Duties: daily, weekly and monthly reports, relationships and payments to suppliers, payroll of
+employees. Experience on real world business and economy. </p>
+    </div> -->
+</div>
 
 <h2>Education</h2>
 <h4>M.Sc. in Computer Science <small>2014 - 2017</small></h4>
@@ -177,30 +201,6 @@ solving skills. Score corresponds to the top 7% worldwide.</small></p>
     <div class="col-md-4">
         <h4>Math Olympics <small>2006 - 2009</small></h4>
         <p>Ranked top 3 every year in high shool (~1k students)</p>
-    </div>
-</div>
-
-
-<h2>Work Experience</h2>
-<div class="row">
-    <div class="col-md-4">
-        <h4>Teaching Assistant <small>2014 - 2016</small></h4>
-        <p><i>University of British Columbia</i> <br>
-            Courses: Computer Graphics: Modeling - Data Structures and Algorithms - Internet Computing. <br>
-            Received a Department of Science TA evaluation score of 4.76 / 5 and positive feedback.</p>
-    </div>
-    <div class="col-md-4">
-        <h4>Undergraduate Research Opportunity Program <small>Summer 2013</small></h4>
-        <p><i>Università della Svizzera Italiana</i><br>
-            Project with Mauro Pezzè about cloud technologies.
-The task was to adapt a framework for testing elastic applications in the cloud to the Amazon
-EC2 Cloud. [Python, Java, shell scripting]</p>
-    </div>
-    <div class="col-md-4">
-        <h4>Part-time Accountant <small>2009 - 2014</small></h4>
-        <p><i>Gori Calzature SRL</i><br>
-            Duties: daily, weekly and monthly reports, relationships and payments to suppliers, payroll of
-employees. Experience on real world business and economy. </p>
     </div>
 </div>
 
